objects/pse__Team_Schedule_Slot__c.object
<CustomObject>
    <description>A specific scheduling instance.</description>
    <fields>
        <fullName>pse__End_Time__c</fullName>
        <description>The time at which the schedule slot ends.</description>
        <inlineHelpText>The time at which the schedule slot ends.</inlineHelpText>
        <label>End Time</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>pse__Start_End_Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Hours__c</fullName>
        <description>The number of hours required per resource in the schedule slot.</description>
        <inlineHelpText>The number of hours required per resource in the schedule slot.</inlineHelpText>
        <label>Hours</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Resources_Required__c</fullName>
        <description>The number of resource required for the schedule slot.</description>
        <inlineHelpText>The number of resource required for the schedule slot.</inlineHelpText>
        <label>Resources Required</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Start_Time__c</fullName>
        <description>The time at which the schedule slot begins.</description>
        <inlineHelpText>The time at which the schedule slot begins.</inlineHelpText>
        <label>Start Time</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>pse__Start_End_Time</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Team_Schedule_Slot_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team Schedule Slot Type</label>
        <referenceTo>pse__Team_Schedule_Slot_Type__c</referenceTo>
        <relationshipLabel>Team Schedule Slots</relationshipLabel>
        <relationshipName>Team_Schedule_Slots</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Team_Schedule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The team schedule associated with the schedule slot.</description>
        <inlineHelpText>The team schedule associated with the schedule slot.</inlineHelpText>
        <label>Team Schedule</label>
        <referenceTo>pse__Team_Schedule__c</referenceTo>
        <relationshipLabel>Team Schedule Slots</relationshipLabel>
        <relationshipName>Team_Schedule_Slots</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Team Schedule Slot</label>
    <nameField>
        <label>Team Schedule Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Schedule Slots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Hours_Should_Be_Non_Negative</fullName>
        <active>true</active>
        <errorConditionFormula>OR(pse__Hours__c &lt; 0 , MOD(pse__Hours__c ,0.25) &lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>pse__Hours__c</errorDisplayField>
        <errorMessage>Hours should be non-negative values in increments of 0.25.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Resources_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>OR(pse__Resources_Required__c &lt; 1,pse__Resources_Required__c &gt; 99)</errorConditionFormula>
        <errorDisplayField>pse__Resources_Required__c</errorDisplayField>
        <errorMessage>Number of Resources should be between 1 to 99.</errorMessage>
    </validationRules>
</CustomObject>